<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.testimony.InputTestActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/img_test"
            android:layout_width="402dp"
            android:layout_height="346dp"
            android:contentDescription="@string/img_pro"
            android:src="@drawable/common_google_signin_btn_icon_dark"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"/>


        <Button
            android:id="@+id/btn_choose_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="125dp"
            android:layout_marginEnd="125dp"
            android:text="@string/choose_file"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"/>



        <EditText
            android:id="@+id/edt_testId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/testId"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:layout_marginBottom="10dp"
            android:inputType="text"
            android:ems="10"
            android:hint="@string/testId"/>
        <EditText
            android:id="@+id/edt_description"
            android:layout_width="367dp"
            android:layout_height="160dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="@string/description"
            android:ems="10"
            android:hint="@string/description"
            android:layout_marginBottom="10dp"
            android:inputType="textMultiLine"/>

        <Button
            android:id="@+id/btn_upload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorRed"
            android:text="@string/upload"
            android:layout_marginStart="125dp"
            android:layout_marginEnd="125dp"
            android:textColor="@color/colorWhite"/>


    </LinearLayout>


</androidx.core.widget.NestedScrollView>