<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_pro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="2dp"
        app:cardElevation="2dp"
        app:cardMaxElevation="2dp"
        app:cardUseCompatPadding="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <ImageView
            android:id="@+id/img_pro"
            android:layout_width="400dp"
            android:layout_height="400dp"
            android:layout_marginTop="6dp"
            android:layout_gravity="center"
            android:contentDescription="@string/img_pro"/>

        <TextView
            android:id="@+id/tv_proId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:maxLines="1"
            android:text="@string/proId"
            android:textColor="@color/colorBlack"/>
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:text="@string/title"
            android:textColor="@color/colorBlack"
            android:maxLines="1"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:id="@+id/tv_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:maxLines="1"
            android:text="@string/price"
            android:textColor="@color/colorBlack"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:text="@string/description"
            android:maxLines="5"
            android:textColor="@color/colorBlack"
            android:layout_marginBottom="10dp"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>



</LinearLayout>