<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_order"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="2dp"
    app:cardElevation="2dp"
    app:cardMaxElevation="2dp"
    app:cardUseCompatPadding="true"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_proId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"/>
        <TextView
            android:id="@+id/tv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:layout_marginBottom="6dp"/>
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginEnd="250dp"
            android:layout_marginBottom="6dp"
            android:gravity="start"
            android:maxLines="1"
            android:text="@string/title" />
        <TextView
            android:id="@+id/tv_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="170dp"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:layout_marginBottom="6dp"
            android:text="@string/note"
            android:layout_marginTop="-30dp"/>

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginEnd="230dp"
            android:text="@string/price"
            />
        <TextView
            android:id="@+id/tv_qty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="180dp"
            android:layout_marginEnd="160dp"
            android:layout_marginTop="-25dp"
            android:text="@string/qty"
            />
        <TextView
            android:id="@+id/tv_subtotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="250dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="-25dp"
            android:layout_marginBottom="6dp"
            android:text="@string/subtotal" />
    </LinearLayout>

</androidx.cardview.widget.CardView>