<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".ui.cart.UpdateCartActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:text="@string/store_name"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:layout_marginBottom="6dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:text="@string/city"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:textAlignment="center"/>

        <View
            android:layout_width="match_parent"
            android:background="@drawable/dash_line"
            android:layerType="software"
            android:layout_height="5dp"/>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:layout_marginTop="6dp"
            android:textColor="@color/colorBlack"
            android:layout_marginBottom="6dp"
            android:text="@string/name"/>
        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:layout_marginBottom="6dp"
            android:textColor="@color/colorBlack"
            android:text="@string/phone"/>
        <TextView
            android:id="@+id/tv_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:layout_marginBottom="6dp"
            android:textColor="@color/colorBlack"
            android:text="@string/address"/>

        <View
            android:layout_width="match_parent"
            android:background="@drawable/dash_line"
            android:layerType="software"
            android:layout_height="5dp"
            android:layout_marginBottom="6dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            tools:listitem="item_cart"/>
        <View
            android:layout_width="match_parent"
            android:background="@drawable/dash_line"
            android:layerType="software"
            android:layout_height="5dp"
            android:layout_marginBottom="6dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:textColor="@color/colorBlack"
                android:text="@string/total"/>
            <TextView
                android:id="@+id/tv_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:layout_marginEnd="30dp"
                android:textColor="@color/colorBlack"
                android:textAlignment="viewEnd"
                android:layout_marginBottom="6dp"
                android:text="@string/zero"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_discount"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:background="@drawable/btn_green"
                android:textColor="@color/colorWhite"
                android:layout_gravity="center_vertical"
                android:text="@string/discount"/>
            <EditText
                android:id="@+id/edt_discount"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:hint="@string/zero"
                android:inputType="number"
                android:layout_gravity="center_vertical"
                android:autofillHints="@string/zero"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/percent"
                android:layout_gravity="center_vertical"
                android:textSize="20sp"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:layout_marginEnd="@dimen/horizontal_margin"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:background="@drawable/dash_line"
            android:layerType="software"
            android:layout_height="5dp"
            android:layout_marginBottom="6dp"/>

        <TextView
            android:id="@+id/tv_pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginEnd="30dp"
            android:textAlignment="viewEnd"
            android:layout_marginBottom="6dp"
            android:textColor="@color/colorBlack"
            android:text="@string/zero"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:textColor="@color/colorBlack"
                android:text="@string/total_cash"/>
            <EditText
                android:id="@+id/edt_cash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:layout_marginEnd="30dp"
                android:textAlignment="viewEnd"
                android:textColor="@color/colorBlack"
                android:hint="@string/zero"
                android:autofillHints="@string/zero"
                android:inputType="number"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_changes"
                android:layout_width="100dp"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:layout_gravity="center_vertical"
                android:background="@drawable/btn_red"
                android:textColor="@color/colorWhite"
                android:text="@string/changes"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tv_changes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="30dp"
                android:textColor="@color/colorBlack"
                android:text="@string/zero"/>


        </LinearLayout>




    </LinearLayout>


</androidx.core.widget.NestedScrollView>