<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.InputMainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_main"
            android:layout_width="402dp"
            android:layout_height="346dp"
            android:contentDescription="@string/img_pro"
            android:src="@drawable/common_google_signin_btn_icon_dark"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/vertical_margin"/>

        <Button
            android:id="@+id/btn_choose_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:text="@string/choose_file"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:layout_marginStart="@dimen/horizontal_margin">

            <EditText
                android:id="@+id/edt_proId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="@string/proId"
                android:ems="10"
                android:hint="@string/proId"
                android:inputType="textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginEnd="@dimen/horizontal_margin">

            <EditText
                android:id="@+id/edt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:autofillHints="@string/title"
                android:inputType="text|textCapSentences"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginEnd="@dimen/horizontal_margin">

            <EditText
                android:id="@+id/edt_content"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:hint="@string/title"
                android:autofillHints="@string/title"
                android:inputType="textMultiLine"
                />
        </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btn_upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@color/colorRed"
                android:layout_gravity="center"
                android:text="@string/upload"
                android:textColor="@color/colorWhite"/>
          </LinearLayout>


</androidx.core.widget.NestedScrollView>